--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<title>Git</title>
+	<title>Git Master</title>
 </head>
 <body>
 	<h1>Cours Git</h1>
